--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -6,6 +6,7 @@ html
         meta(name="viewport" content="width=device-width, initial-scale=0.8")
         base(href="/")
         title Reversi
+        link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
         link(href="/node_modules/roboto-fontface/css/roboto/roboto-fontface.css" rel="stylesheet")
         link(href=`/node_modules/bootstrap/dist/css/bootstrap.min.css?${timestamp}` rel="stylesheet")
         link(href=`/node_modules/font-awesome/css/font-awesome.min.css?${timestamp}` rel="stylesheet")
