--- a/client/less/common.less
+++ b/client/less/common.less
@@ -38,3 +38,29 @@ hr {
     font-size: 12px;
 }
 
+input {
+    width: 100%;
+    outline: 0;
+    border: 1px solid;
+    border-color: #B6B4B6;
+    border-radius: 2px;
+    padding: 6px 9px;
+    font-size: 14px;
+    &:focus {
+        border-color: @primary-color;
+    }
+}
+
+.btn {
+    font-size: 14px;
+    border-radius: 3px;
+    border: 0;
+}
+
+.btn-primary {
+    background-color: @primary-color;
+    transition: background-color 100ms;
+    &:hover {
+        background-color: darken(@primary-color, 10%);
+    }
+}
