--- a/client/less/common.less
+++ b/client/less/common.less
@@ -64,3 +64,9 @@ input {
         background-color: darken(@primary-color, 10%);
     }
 }
+
+.loading-spinner {
+    position: absolute;
+    top: 30%; left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
