create match & updates

--- a/client/less/common.less
+++ b/client/less/common.less
@@ -43,9 +43,10 @@ input {
     outline: 0;
     border: 1px solid;
     border-color: #B6B4B6;
-    border-radius: 2px;
+    border-radius: 3px;
     padding: 6px 9px;
     font-size: 14px;
+    height: 40px;
     &:focus {
         border-color: @primary-color;
     }
