--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -6,7 +6,22 @@
         height: 40px;
     }
     .initial-ctnr {
-        .btn-guest {
+        .guest-form {
+            .col-7 {
+                padding-right: 5px;
+                input {
+                    float: left;
+                    margin-right: 10px;
+                }
+            }
+            .col-5 {
+                padding-left: 5px;
+                .btn-guest {
+                    font-size: 14px;
+                }
+            }
+        }
+        .sign-in-btn {
             margin-top: 12px;
         }
     }
@@ -14,5 +29,16 @@
         .btn {
             margin-top: 12px;
         }
+    }
+    .logged-in-ctnr {
+        .btn {
+            margin-bottom: 10px;
+        }
+    }
+}
+
+.primary-modal {
+    .hi {
+        font-size: 24px;
     }
 }
