--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -14,7 +14,7 @@ html
     body
         block content
 
-        script(src=`/node_modules/babel-polyfill/dist/polyfill.min.js?${timestamp}`)
+        script(src=`/node_modules/@babel/polyfill/dist/polyfill.min.js?${timestamp}`)
         script(src=`/node_modules/zone.js/dist/zone.min.js?${timestamp}`)
 
         block scripts
