--- a/client/views/partials/scripts.pug
+++ b/client/views/partials/scripts.pug
@@ -1,3 +1,4 @@
+script(src="/node_modules/reflect-metadata/Reflect.js")
 script(src="/node_modules/systemjs/dist/system.js")
 script(src="/systemjs.config.js")
 script.
