--- a/client/less/common.less
+++ b/client/less/common.less
@@ -5,6 +5,7 @@ html, body {
     color: @font-color;
     height: 100%;
     width: 100%;
+    background-color: @background-color;
 }
 
 .container {
@@ -14,6 +15,7 @@ html, body {
 p {
     margin-bottom: 0;
     font-weight: @font-weight-regular;
+    line-height: initial;
 }
 
 a {
@@ -30,7 +32,7 @@ img {
 
 hr {
     border-top: 1px solid rgba(155, 178, 204, 0.2);
-    margin: 30px 0;
+    margin: 20px 0;
 }
 
 .center {
