--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,9 +1,10 @@
-@font-color: #384053;
+@font-color: lighten(#384053, 50%);
 @primary-color: #9900ff;
 @secondary-color: #0092ff;
 @tertiary-color: #94c5ff;
 @error-color: #F44040;
 @success-color: #00C759;
+@background-color: #2D2D2D;
 
 @container-width: 960px;
 @screen-xl-min: 1200px;
