--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -1,12 +1,18 @@
+@import "less/variables.less";
+
 .board {
-    margin-top: 120px;
+    max-width: 640px;
+    margin: 120px auto 0;
     cursor: pointer;
     .square-ctnr {
         display: inline-block;
+        // width: calc(~"12.5% + 0px");
         width: 12.5%;
         height: auto;
         position: relative;
-        padding: 2px;
+        // padding: 0.2%;
+        // border: 1px solid @background-color;
+        padding: 1px;
         &:hover {
             &.hoverLight, &.hoverDark {
                 .piece {
@@ -33,15 +39,15 @@
         .square {
             width: 100%;
             height: auto;
-            border-radius: 3px;
+            border-radius: 2px;
         }
         .piece {
-            width: 86%;
-            height: 86%;
+            width: 88%;
+            height: 88%;
+            left: 6%;
+            top: 6%;
             position: absolute;
             z-index: 1;
-            left: 7%;
-            top: 7%;
             opacity: 0;
             background-repeat: no-repeat;
             background-size: cover;
