upgrade packages and dark mode style

--- a/client/less/common.less
+++ b/client/less/common.less
@@ -39,6 +39,10 @@ hr {
     text-align: center;
 }
 
+.right {
+    text-align: right;
+}
+
 .error {
     color: @error-color;
     font-size: 12px;
