--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -1,13 +1,9 @@
 @import "less/variables.less";
 
 .header {
-    // border-bottom: 1px solid #0F0F0F;
-    box-shadow: 0 0 1px -1px #0F0F0F;
     padding: 15px 0;
-    // background-color: #333333;
     background-color: lighten(#333333, 5%);
     .nav-btn {
-        // background-color: darken(#333333, 5%);
         width: 55px;
         height: 55px;
         background-color: @background-color;
@@ -29,6 +25,15 @@
         .fa-user {
             padding-left: 2.12px;
         }
+        .fa-question {
+            padding-left: 1.25px;
+        }
+    }
+    .center-left {
+        margin-right: 20%;
+    }
+    .center-right {
+        margin-left: 20%;
     }
     .logo-ctnr {
         cursor: pointer;
