add menu titles

--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,4 +1,4 @@
-@font-color: lighten(#384053, 50%);
+@font-color: #fff;
 @primary-color: #9900ff;
 @secondary-color: #0092ff;
 @tertiary-color: #94c5ff;
@@ -18,5 +18,5 @@
 
 @font-weight-light: 300;
 @font-weight-regular: 400;
-@font-weight-semi-bold: 600;
+@font-weight-semibold: 600;
 @font-weight-bold: 700;
