--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -23,4 +23,4 @@
                     .nav-btn-ctnr
                         .nav-btn
                             .fas.fa-user
-                        p.title Account
+                        p.title Profile
