--- a/client/src/app/match/match.pug
+++ b/client/src/app/match/match.pug
@@ -1,12 +1,28 @@
 header-component
 
 .container
-    .row.justify-content-center
-        .col-3
-            .center
-                button.btn.btn-primary((click)="clickJoin()", *ngIf="isJoinable()", [disabled]="joining") Join
-    .board
-        .square-ctnr(*ngFor="let square of match.board.squares; let i = index", (click)="placePiece(i)", [ngClass]="{light: square == Square.LIGHT, dark: square == Square.DARK, hoverLight: accountService.account.id == match.playerLightId && match.turn == Square.LIGHT, hoverDark: accountService.account.id == match.playerDarkId && match.turn == Square.DARK}")
+    .center
+        button.btn.btn-primary.join-btn((click)="clickJoin()", *ngIf="isJoinable()", [disabled]="joining") Join game
+    .board([class.activeplayer]="isActivePlayer()")
+        .square-ctnr(*ngFor="let square of match.board.squares; let i = index", (click)="placePiece(i)", [ngClass]="getSquareClasses(square)")
             img.square(src="/img/board-square.svg")
             .piece
-    p {{match | json}}
+    .status-ctnr
+        p.status {{getStatus()}}
+    .row
+        .col-sm-6
+            .player-ctnr-left([ngClass]="{active: match.playerDarkId != null && match.playerLightId != null && match.turn == Side.DARK}")
+                .top-ctnr
+                    p.count {{darkCount}}
+                    img.piece-icon(src="/img/piece-dark.svg")
+                //- .bottom-ctnr
+                    .avatar-ctnr
+                        img.avatar(src="http://gravatar.com/avatar/bb0762fb4bcc140466647642af7549a6")
+                        p.name Jordan
+        .col-sm-6
+            .right
+                .player-ctnr-right([ngClass]="{active: match.playerDarkId != null && match.playerLightId != null && match.turn == Side.LIGHT}")
+                    .top-ctnr
+                        img.piece-icon(src="/img/piece-light.svg")
+                        p.count {{lightCount}}
+    //- p {{match | json}}
