--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,4 +1,5 @@
-@font-color: #fff;
+@font-color-light: #fff;
+@font-color-dark: #384053;
 @primary-color: #9900ff;
 @secondary-color: #0092ff;
 @tertiary-color: #94c5ff;
