--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -33,11 +33,13 @@
         &.light, &.hoverLight:not(.dark) {
             .piece {
                 background-image: url("/img/piece-light.svg");
+                background-size: 100% 100%;
             }
         }
         &.dark, &.hoverDark:not(.light) {
             .piece {
                 background-image: url("/img/piece-dark.svg");
+                background-size: 100% 100%;
             }
         }
         .square {
