--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -12,7 +12,7 @@
             margin-top: 10px;
         }
         .divider {
-            border-bottom: 1px solid @font-color;
+            border-bottom: 1px solid @font-color-light;
             height: 11px;
             margin-top: 20px;
             margin-bottom: 30px;
