--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -67,3 +67,27 @@
         }
     }
 }
+
+.about-modal {
+    // li {
+    //     font-size: 14px;
+
+    // }
+    .how-to-play {
+        font-size: 14px;
+    }
+    .created {
+        font-size: 14px;
+        margin-bottom: 15px;
+        margin-top: 30px;
+    }
+    .keybase {
+        background-color: #4c8eff;
+        background-image: url("https://keybase.io/images/extension/placeholder_button_logo@2x.png");
+        background-size: 16px 16px;
+        padding-left: 35px;
+        background-position: 12px 7px;
+        background-repeat: no-repeat;
+        font-size: 14px;
+    }
+}
