--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -91,3 +91,13 @@
         font-size: 14px;
     }
 }
+
+.profile-modal {
+    .sign-in {
+        p {
+            font-size: 16px;
+            text-align: center;
+            margin: 60px 0;
+        }
+    }
+}
