--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -20,7 +20,7 @@
                         p.title Settings
             .col-3
                 .right
-                    .nav-btn-ctnr
+                    .nav-btn-ctnr((click)="openProfileModal()")
                         .nav-btn
                             .fas.fa-user
                         p.title Profile
@@ -32,3 +32,14 @@ ng-template(#aboutModal, let-c="close")
         a.btn.btn-primary.how-to-play(href="https://en.wikipedia.org/wiki/Reversi#Rules" target="_blank" referrer="noreferrer") How to play
         p.created Created by Jordan Luyke
         a.btn.btn-primary.keybase(href="https://keybase.io/jordanluyke" target="_blank" referrer="noreferrer") Keybase
+
+ng-template(#profileModal, let-c="close")
+    .modal-body.profile-modal
+        .fas.fa-times((click)="c()")
+        p.title Profile
+        .sign-in(*ngIf="!accountService.loaded")
+            p Please&nbsp;
+                a(routerLink="/", (click)="c()") sign in
+                span .
+        .profile(*ngIf="accountService.loaded")
+            p account id: {{accountService.account.id}}
