--- a/client/less/common.less
+++ b/client/less/common.less
@@ -6,6 +6,7 @@ html, body {
     height: 100%;
     width: 100%;
     background-color: @background-color;
+    letter-spacing: 0.2px;
 }
 
 .container {
@@ -64,10 +65,10 @@ input {
 }
 
 .btn {
-    font-size: 14px;
+    font-size: 16px;
     border-radius: 3px;
     border: 0;
-    padding: 7px 12px;
+    padding: 7px 15px;
     &:focus {
         outline: none !important;
         box-shadow: none !important;
