--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -69,16 +69,9 @@
 }
 
 .about-modal {
-    // li {
-    //     font-size: 14px;
-
-    // }
-    .how-to-play {
-        font-size: 14px;
-    }
     .created {
         font-size: 14px;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         margin-top: 30px;
     }
     .keybase {
@@ -98,6 +91,18 @@
             font-size: 16px;
             text-align: center;
             margin: 60px 0;
+        }
+    }
+    .profile {
+        p {
+            font-size: 14px;
+            margin: 20px 0;
+            font-weight: @font-weight-semibold;
+        }
+        .btn-danger {
+            margin: 30px 0 10px;
+            padding-left: 15px;
+            padding-right: 15px;
         }
     }
 }
