--- a/client/less/common.less
+++ b/client/less/common.less
@@ -68,7 +68,7 @@ input {
     font-size: 16px;
     border-radius: 3px;
     border: 0;
-    padding: 7px 15px;
+    padding: 8px 15px 7px;
     &:focus {
         outline: none !important;
         box-shadow: none !important;
