--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -3,19 +3,19 @@
 .sign-in-ctnr {
     margin-top: 60px;
     .btn {
-        font-size: 16px;
         width: 100%;
-        height: 40px;
+    }
+    .fa-circle-notch {
+        font-size: 68px;
     }
     .initial-ctnr {
         .btn {
-            margin-top: 10px;
+            margin-bottom: 10px;
         }
         .divider {
             border-bottom: 1px solid @font-color-light;
             height: 11px;
-            margin-top: 20px;
-            margin-bottom: 30px;
+            margin: 10px 0 30px;
             width: 100%;
             text-align: center;
             .text {
@@ -24,6 +24,20 @@
                 font-size: 14px;
             }
         }
+        .facebook {
+            background-color: #4267B2;
+            background-image: url("/img/facebook.svg");
+            background-repeat: no-repeat;
+            background-size: 24px 24px;
+            background-position: 7.5px 7.5px;
+        }
+        .google {
+            background-color: #4285F4;
+            background-image: url("/img/google.svg");
+            background-repeat: no-repeat;
+            background-size: 41px 41px;
+            background-position: -1px -1px;
+        }
     }
     .logged-in-ctnr {
         .btn {
@@ -31,9 +45,3 @@
         }
     }
 }
-
-// .primary-modal {
-//     .hi {
-//         font-size: 24px;
-//     }
-// }
