--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -16,5 +16,7 @@ html
 
         script(src=`/node_modules/@babel/polyfill/dist/polyfill.min.js?${timestamp}`)
         script(src=`/node_modules/zone.js/dist/zone.min.js?${timestamp}`)
+        script(type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js")
 
         block scripts
+
