name update form

--- a/client/src/app/home/home.pug
+++ b/client/src/app/home/home.pug
@@ -9,14 +9,17 @@ header-component
                         .fas.fa-circle-notch.fa-spin
                 div(*ngIf="!accountLoading")
                     .initial-ctnr(*ngIf="!accountService.loaded")
-                        //- form.guest-form((ngSubmit)="submitGuestSignIn()", ngNativeValidate)
-                            input([(ngModel)]="guestName", name="guestName", maxlength="40", placeholder="Guest", required)
-                            button.btn.btn-success.btn-guest(type="submit", [disabled]="reqInProgress") Play as Guest
                         button.btn.btn-success.btn-guest((click)="clickGuest()") Play as Guest
                         .divider: span.text or
                         a.btn.btn-primary.facebook((click)="clickFbLogin()") Sign in with Facebook
                         a.btn.btn-primary.google((click)="clickGoogleLogin()") Sign in with Google
                         //- .fb-login-button(data-width="300" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false")
                     .logged-in-ctnr(*ngIf="accountService.loaded")
+                        form.name-form((ngSubmit)="submitName()", ngNativeValidate)
+                            .row
+                                .col-8
+                                    input([(ngModel)]="name", name="name", maxlength="40", placeholder="Name", required)
+                                .col-4
+                                    button.btn.btn-success(type="submit", [disabled]="reqInProgress") Save
                         //- button.btn.btn-primary Find Game
                         button.btn.btn-success((click)="clickCreateGame()") Create Game
