--- a/client/src/app/logout/logout.pug
+++ b/client/src/app/logout/logout.pug
@@ -1,2 +1,6 @@
+header-component
+
 .container
-    p Logging out...
+    .center
+        p.logging-out Logging out...
+        .fas.fa-circle-notch.fa-spin
