--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -6,7 +6,7 @@
         width: 100%;
     }
     .fa-circle-notch {
-        font-size: 68px;
+        font-size: 50px;
     }
     .initial-ctnr {
         .btn {
@@ -42,6 +42,32 @@
     .logged-in-ctnr {
         .btn {
             margin-bottom: 10px;
+        }
+        .name-label {
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+        .name-form {
+            .col-8 {
+                padding-right: 5px;
+            }
+            .col-4 {
+                padding-left: 5px;
+            }
+        }
+        .divider {
+            border-bottom: 1px solid lighten(@background-color, 30%);
+            height: 11px;
+            margin: 5px auto 25px;
+            width: 25%;
+            text-align: center;
+            font-size: 14px;
+        }
+        .btn-create {
+            background-color: darken(#FCBE8A, 30%);
+            &:hover {
+                background-color: darken(#FCBE8A, 35%);
+            }
         }
     }
 }
