--- a/client/less/common.less
+++ b/client/less/common.less
@@ -91,6 +91,15 @@ input {
     font-size: 68px;
 }
 
+.form-check-input {
+    width: 25px;
+    transform: scale(1.25);
+}
+
+.form-check-label {
+    font-size: 16px;
+}
+
 .modal-body {
     color: @font-color-dark;
     .fa-times {
