--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -1,4 +1,5 @@
 @import "less/variables.less";
+@import "less/mixins.less";
 
 .join-btn {
     margin-top: 45px;
@@ -33,13 +34,11 @@
         &.light, &.hoverLight:not(.dark) {
             .piece {
                 background-image: url("/img/piece-light.svg");
-                background-size: 100% 100%;
             }
         }
         &.dark, &.hoverDark:not(.light) {
             .piece {
                 background-image: url("/img/piece-dark.svg");
-                background-size: 100% 100%;
             }
         }
         .square {
@@ -48,15 +47,16 @@
             border-radius: 2px;
         }
         .piece {
-            width: 88%;
-            height: 88%;
-            left: 6%;
-            top: 6%;
+            background-size: 88% 88%;
+            background-position: center center;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
             position: absolute;
             z-index: 1;
             opacity: 0;
             background-repeat: no-repeat;
-            background-size: cover;
             background-image: none;
         }
     }
@@ -64,21 +64,20 @@
 .status-ctnr {
     margin: 30px 0;
     .status {
+        .overflow-ellipsis;
         font-size: 30px;
         text-align: center;
     }
 }
 .player-ctnr {
     background-color: lighten(#333333, 5%);
-    height: 90px;
+    min-height: 90px;
     width: 240px;
     display: inline-block;
     padding: 10px;
     border-radius: 5px;
-    &.active {
-        background-color: lighten(#333333, 15%);
-    }
     .top-ctnr {
+        padding-bottom: 10px;
         .piece-icon {
             height: 70px;
             width: auto;
@@ -90,14 +89,17 @@
         }
     }
     .bottom-ctnr {
-        .avatar-ctnr {
-            .avatar {
-                height: 30px;
-                width: 30px;
-            }
-            .name {
-                font-size: 14px;
-            }
+        border-top: 1px solid lighten(@background-color, 30%);
+        padding-top: 10px;
+        .name {
+            text-align: center;
+            font-size: 14px;
+        }
+    }
+    &.active {
+        background-color: lighten(#333333, 25%);
+        .bottom-ctnr {
+            border-color: #fff
         }
     }
 }
